tests/errors/semantics/constant_return_type_in_funcsig.odl
main :: () -> void  {
    myint := int;
    add := (int, int) -> myint;
};